# poc-github

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  labeler.yaml  pull_request_template.md  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: feature_to_release.md  release_to_main.md
.github/workflows/: auto-tag.yaml  datastructures-algorithms-ci-cd.yaml  deploy.yaml  poc-github-ci-cd.yaml  poc-github-tag-and-release.yaml  poc-github-validate.yaml  validate.yaml
source/: CMakeLists.txt
source/0001_Basics/: CMakeLists.txt  Node.cc
src/: CMakeLists.txt
src/0001_Basics/: Node.cc
test/0001_Basics/: CMakeLists.txt
tests/0001_Basics/: NodeTest.cc
